@startuml
hide circle
skinparam linetype ortho

entity "FilterableField" as ff {
  * Id : int <<PK>>
  --
  EventTypeName : string <<FK>>
  EventTypeVersion : int <<FK>>
  JsonPath : string
  DataType : enum {String, Number, Boolean, DateTimeOffset}
  IsIndexed : bool
}

entity "StoredEvent" as event {
  * SequenceNumber : bigint <<PK>>
  --
  EventType : string
  SchemaVersion : int
  Payload : text
  OccurredAt : datetimeoffset
}

ff ..> event : "JsonPath is evaluated against Payload at\nquery time via json_extract/->>/JSON_VALUE\n-- NOT a DB relationship, Payload is plain TEXT"

note right of ff
  IsIndexed = true triggers a provider-specific
  expression index / computed column over Payload
  for this JsonPath (see 02-data-model.md,
  "Per-provider index strategy"). The where
  argument's static EventFilterInput type (a flat
  { field, eq, neq, gt, gte, lt, lte, contains }
  shape) can syntactically NAME any field string --
  it is GraphQlFilterPredicateBuilder that looks the
  name up against THIS event type's own declared
  rows at resolver runtime and throws a
  GraphQLException if it isn't one of them. An
  honest, named narrowing from ADR-037's literal
  schema-shape guarantee for filtering specifically
  (still true for the subscription field name and
  payload fields -- see follow-subscribe.md).
end note
@enduml
